Modified trouble causing code

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -2,20 +2,20 @@
     T I D o S - F R A M E W O R K   v2.1.0
    ========================================
 
-    Authors
-    =======
+ $ Authors
+   =======
 
  * Pinaxx Robinson <@_tID>
 
    - Main author behind this framework.
-   - Current maintainer through the latest version v2.1.0.
+   - Current maintainer through the latest version v1.0.0.
    - Contact - <drake [at] teamcodesploit.gq>
 
-  Contributors
-  ============
+ $ Contributors
+   ============
 
  * Yugabdh Pashte <@attacker_loaded>
 
    - Idealist and bug fixer of this framework.
-   - Tester and maintainer through the latest version v2.1.0
+   - Tester and maintainer through the latest version v1.0.0.
    - Contact - <yugabdh [at] teamcodesploit.gq> 
