--- a/CHANGELOG
+++ b/CHANGELOG
@@ -87,7 +87,7 @@
 	- Added support for minor updates via git pull.
 	- Added fix to the core end modules.
 	
-    * v1.2.2 [latest release] (#stable)
+    * v1.2.2 
     
     	Improvements to the core features. Bug fixes.
 
@@ -96,3 +96,15 @@
 	- Improved the crlf module.
 	- Fixed erring code at Host Header Injection module.
 	- Updated the payload database with new payloads.
+
+    * v1.3.0 [latest release] (#stable)
+
+        Additions to OSINT modules. Improvements to other parts of `ActiveRecon`.
+
+        Changelog:
+- Addition and improvements to `ActiveRecon` modules.
+- New module added `Web Technology Enumeration`.
+- 3 new modules added to `PassiveRecon` modules:
+    - Enumeration via Google Groups.
+    - PasteBin Posts Gatherer.
+    - LinkedIn Gathering.
