--- a/CHANGELOG
+++ b/CHANGELOG
@@ -114,7 +114,7 @@
         Addition of the new modules + bug fixes.
 
         Changelog:
-New module added LDAP injection.
+        - New module added LDAP injection.
 Improvements to the updater module.
 Addition of ldap_payloads at the payload-db.
 Other minor bug fixes.
