--- a/CHANGELOG
+++ b/CHANGELOG
@@ -115,6 +115,6 @@
 
         Changelog:
         - New module added LDAP injection.
-Improvements to the updater module.
+        - Improvements to the updater module.
 Addition of ldap_payloads at the payload-db.
 Other minor bug fixes.
