--- a/CHANGELOG
+++ b/CHANGELOG
@@ -117,4 +117,4 @@
         - New module added LDAP injection.
         - Improvements to the updater module.
         - Addition of ldap_payloads at the payload-db.
-Other minor bug fixes.
+        - Other minor bug fixes.
