--- a/doc/man/tree.man
+++ b/doc/man/tree.man
@@ -39,34 +39,37 @@
  
 
 
- > TIDoS has 91 modules as the whole, so on expanding:
+ > TIDoS has 95 modules as the whole, so on expanding:
 
 * __Reconnaissance + OSINT__
 
 	+ Passive Reconnaissance:
-	    - Nping Enumeration `via external APi`
-	    - WhoIS Lookup `domain info gathering`
-	    - GeoIP Lookup `pinpoint physical location`
+	    - Nping Enumeration `Via external APi`
+	    - WhoIS Lookup `Domain info gathering`
+	    - GeoIP Lookup `Pinpoint physical location`
 	    - DNS Configuration Lookup `DNSDump`
-	    - Subdomains Lookup `indexed ones`
+	    - Subdomains Lookup `Indexed ones`
 	    - Reverse DNS Configuration Lookup
 	    - Reverse IP Lookup `Hosts on same server`
+	    - Domain IP History `IP Instances`
 	    - Web Links Gatherer `Indexed ones`
 	    - Google Search `Manual search`
 	    - Google Dorking (multiple modules) `Automated`
-	    - Email to Domain Resolver `Email WhoIs` `__NEW__`
-	    - Wayback Machine Lookups `Find Backups` `__NEW__`
-      	    - Breached Email Check `Pwned Email Accounts` `__NEW__`
-	    - Enumeration via Google Groups `__NEW__`
-	    - Check Alias Availability `Social Networks` `__NEW__`
-	    - Find PasteBin Posts `Domain Based` `__NEW__`
-	    - LinkedIn Gathering `Employees & Company` `__NEW__`
+	    - Email to Domain Resolver `Email WhoIs`
+	    - Wayback Machine Lookups `Find Backups`
+	    - Breached Email Check `Pwned Email Accounts`
+	    - Enumeration via Google Groups 
+	    - Check Alias Availability `Social Networks`
+	    - Find PasteBin Posts `Domain Based`
+	    - LinkedIn Gathering `Employees & Company`
+	    - Threat Intelligence Gathering `Bad IPs`
 
 	+ Active Reconnaissance
 	    - Ping enumeration `Advanced`
-	    - CMS Detection `(185+ CMSs supported)`
+	    - CMS Detection `(185+ CMSs supported)` `IMPROVED`
 	    - Advanced Traceroute `IMPROVED`
 	    - Grab HTTP Headers `Live Capture`
+	    - Find HTTP Methods Allowed `NEW`
 	    - Detect Server `IMPROVED`
 	    - Examine SSL Certificate `Absolute`
 	    - `robots.txt` and `sitemap.xml` Checker
@@ -77,10 +80,10 @@
 	+ Information Disclosure
 	    - Credit Cards Disclosure `If Plaintext`
 	    - Email Harvester `IMPROVED`
-	    - Fatal Errors Enumeration `Includes Full Path Disclosure checks`
-	    - Internal IP Disclosure
-	    - Phone Number Havester
-	    - Social Security Number Harvester `US Only`
+	    - Fatal Errors Enumeration `Includes Full Path Disclosure`
+	    - Internal IP Disclosure `Signature Based`
+	    - Phone Number Havester `Signature Based`
+	    - Social Security Number Harvester `US Ones`
 
 * __Scanning & Enumeration__
 
@@ -92,8 +95,8 @@
 	    - XMAS Flag Scan `Reliable Only in LANs`
 	    - Fin Flag Scan `Reliable Only in LANs`
 	    - Port Service Detector
-	+ Web Technology Enumeration `Absolute` `__NEW__`
-	+ Interactive Scanning with NMap `16 modules`
+	+ Web Technology Enumeration `Absolute`
+	+ Interactive Scanning with NMap `16 preloaded modules`
 	+ Crawlers
 	    - Depth 1
 	    - Depth 2 `IMPROVED`
@@ -117,7 +120,7 @@
     __Serious Web Vulnerabilities__
     
 	+ File Intrusions
-	    - Local File Intrusion (LFI)
+	    - Local File Intrusion (LFI) `Param based`
 	    - Remote File Inclusion (RFI)
 	    	- Parameter Based
 		- Pre-loaded Path Based
@@ -130,6 +133,7 @@
 	    - User-Agent Value Based
 	    - Auto-gathering `IMPROVED`
 	    - Parameter Based `Manual`
+	+ LDAP Injection `Parameter Based`
 	+ Host Header Injection `port based`
 	+ Bash Command Injection `Shellshock` 
 	+ Cross-Site Scripting `beta`
@@ -137,7 +141,7 @@
 	    - Referer Value Based
 	    - User-Agent Value Based
 	    - Parameter Value Based `Manual`
-	+ Unvalidated URL Forwards 
+	+ Unvalidated URL Forwards `Open Redirect`
 	+ CRLF Injection and HTTP Response Splitting
 	    - User-Agent Value Based
 	    - Parameter value Based `Manual`
@@ -146,26 +150,25 @@
 
 	+ Protocol Credential Bruteforce 
 
-	    - FTP Bruteforce
-	    - SSH Bruteforce
-	    - POP 2/3 Bruteforce
-	    - SQL Bruteforce
-	    - XMPP Bruteforce
-	    - SMTP Bruteforce
-	    - TELNET Bruteforce
+	    - FTP Protocol Bruteforce
+	    - SSH Protocol Bruteforce
+	    - POP 2/3 Protocol Bruteforce
+	    - SQL Protocol Bruteforce
+	    - XMPP Protocol Bruteforce
+	    - SMTP Protocol Bruteforce
+	    - TELNET Protocol Bruteforce
 	    
 	+ String & Payload Encoder
-
-	    - URL Encode
-	    - Base64 Encode
-	    - HTML Encode
-	    - Plain ASCII Encode
-	    - Hex Encode
-	    - Octal Encode
-	    - Binary Encode
-	    - GZip Encode
+	
+	    - URL Character Encoding
+	    - Base64 Character Encoding
+	    - HTML Character Encoding
+	    - Plain ASCII Character Encoding
+	    - Hex Character Encoding
+	    - Octal Character Encoding
+	    - Binary Character Encoding
+	    - GZip Character Encoding
 
 - __Exploitation__ `purely developmental`
 
 	+ ShellShock
-
