Added existing changelogs and changes to version number

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -1,21 +1,30 @@
 
-    T I D o S - F R A M E W O R K   v1.0
-   ======================================
+   ===============================
+    T I D o S - F R A M E W O R K 
+   ===============================
 
- $ Author
-   ======
+ + Authors and Contributors
+   - List of all people who have contributed to this project via ideas suggestion, authoring of new modules and stuff.
+
+ $ Author(s) 
+   =========
 
  * Pinaxx Robinson <@_tID>
 
    - Main author behind this framework.
-   - Current maintainer through the latest version v1.0.0.
-   - Contact - <drake [at] teamcodesploit.gq>
+   - Current developer and maintainer through the latest version.
+   - Contact - <theinfecteddrake [at] gmail.com>
 
  $ Contributor(s)
    ==============
 
  * Yugabdh Pashte <@attacker_loaded>
 
-   - Idealist and bug fixer of this framework.
-   - Tester and maintainer through the latest version v1.0.0.
-   - Contact - <yugabdh [at] teamcodesploit.gq> 
+   - Ideator and bug fixer of this framework.
+   - Former tester and maintainer till version v1.2.
+   - Contact - <yugabdh.pashte [at] gmail.com>
+
+ * Biprodeep Roy <@virtu4lgh0st>
+
+   - Ideator and remediator of this project.
+   - Contact - >biprodeep [at] gmail.com>
