--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -27,4 +27,5 @@
  * Biprodeep Roy <@virtu4lgh0st>
 
    - Ideator and remediator of this project.
+   - Suggestor of awesome fixes for improvements to overall build + runtime efficiency.
    - Contact - >biprodeep [at] gmail.com>
