Typo fix at AUTHORS

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -28,4 +28,5 @@
 
    - Ideator and remediator of this project.
    - Suggestor of awesome fixes for improvements to overall build + runtime efficiency.
-   - Contact - >biprodeep [at] gmail.com>
+   - Contact - <biprodeep [at] gmail.com>
+   
