--- a/doc/man/tree.man
+++ b/doc/man/tree.man
@@ -43,6 +43,7 @@
 
 TIDoS Framework presently supports the following: `and is under active development`
 
+
 * __Reconnaissance + OSINT__
 
 	+ Passive Reconnaissance:
@@ -90,7 +91,9 @@ TIDoS Framework presently supports the following: `and is under active developme
 		    - Common Backup Locations `.bak, .db, etc.`
 		    - Common Password Locations ` .pgp, .skr, etc.`
 		    - Common Proxy Path Configs. `.pac, etc.`
+		    - Multiple Index Paths `index, index1, etc.`
 		    - Common Dot Files `.htaccess, .apache, etc`
+		    - Common Logfile Locations `.log, .changelog, etc`
 
 	+ Information Disclosure
 	    - Credit Cards Disclosure `If Plaintext`
@@ -108,14 +111,15 @@ TIDoS Framework presently supports the following: `and is under active developme
 	    - TCP SYN Scan `Highly reliable`
 	    - TCP Connect Scan `Highly Reliable`
 	    - XMAS Flag Scan `Reliable Only in LANs`
-	    - Fin Flag Scan `Reliable Only in LANs`
+	    - FIN Flag Scan `Reliable Only in LANs`
 	    - Port Service Detector
 	+ Web Technology Enumeration `Absolute`
+	+ Complete SSL Enumeration `Absolute`
 	+ Operating System Fingerprinting `IMPROVED`
 	+ Banner Grabbing of Services `via Open Ports`
 	+ Interactive Scanning with NMap `16 preloaded modules`
-	+ Enumeration Domain-Linked IPs `Using CENSYS Database`
-	+ Crawlers
+	+ Internet Wide Servers Scan `Using CENSYS Database`
+	+ Web and Links Crawlers
 	    - Depth 1 `Indexed Uri Crawler`
 	    - Depth 2 `Single Page Crawler`
 	    - Depth 3 `Web Link Crawler`
@@ -132,7 +136,7 @@ TIDoS Framework presently supports the following: `and is under active developme
 		- `X-FRAME-OPTIONS` Header Checks
 	+ Security on Cookies
 		- `HTTPOnly` Flag
-		- `Secure` Flag
+		- `Secure` Flag on Cookies
 	+ Cloudflare Misconfiguration Check
 		- DNS Misconfiguration Checks
 		- Online Database Lookup `For Breaches`
@@ -142,7 +146,7 @@ TIDoS Framework presently supports the following: `and is under active developme
 		- Missing `SPF` Records
 		- Missing `DMARC` Records
 	+ Host Header Injection
-		- Port Based `Over HTTP 80`
+		- Port Based `Web Socket Based`
 		- `X-Forwarded-For` Header Injection
 	+ Security Headers Analysis `Live Capture`
 	+ Cross-Site Tracing `HTTP TRACE Method`
@@ -181,8 +185,8 @@ TIDoS Framework presently supports the following: `and is under active developme
 	    - User-Agent Value Based
 	    - Parameter Value Based `Manual`
 	+ Unvalidated URL Forwards `Open Redirect`
-	+ PHP Code Injection `Windows + Linux`
-	+ HTTP Response Splitting `CRLF Injection`
+	+ PHP Code Injection `Windows + Linux RCE`
+	+ CRLF Injection `HTTP Response Splitting`
 	    - User-Agent Value Based
 	    - Parameter value Based `Manual`
 	+ Sub-domain Takeover `50+ Services`
@@ -211,3 +215,4 @@ TIDoS Framework presently supports the following: `and is under active developme
 - __Exploitation__ `purely developmental`
 
 	+ ShellShock
+	
