Small change to main AUTH name

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -9,7 +9,7 @@
  $ Author(s) 
    =========
 
- * Pinaxx Robinson <@_tID>
+ * The Infected Drake <@_tID>
 
    - Main author behind this framework.
    - Current developer and maintainer through the latest version.
