--- a/CHANGELOG
+++ b/CHANGELOG
@@ -194,3 +194,13 @@
 	- Efficiency of InfoDisc Phase modules highly uplifted.
 	- Migration from Python2 to Python3 is on the roll.
 	- Small bug fixes (as usual). 
+
+    * v1.7.0
+
+	Some major changes to pre-existing code infrastructure.
+
+	Changelog:
+	- The best part of it is that, TIDoS now has all API keys set by default!
+	- Basic changes to code structure.
+	- Included Travis CI integration to TIDoS.
+	- Some major bug fixes and other stuff (as usual).
