Update to AUTHORS, gave credits to contributors.

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -27,7 +27,7 @@
  * Biprodeep Roy <@virtu4lgh0st>
 
    - Ideator and remediator of this project.
-   - Suggestor of awesome fixes for improvements to overall build + runtime efficiency.
+   - Helped improving overall build + runtime efficiency.
    - Contact - <biprodeep [at] gmail.com>
 
  * Cclauss <@cclauss>
