Added @arkwrn for proper credits due #75.

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -18,20 +18,12 @@
  $ Contributor(s)
    ==============
 
- * Yugabdh Pashte <@attacker_loaded>
+ * Arie Kurniawan <@arkwrn>
 
-   - Ideator and bug fixer of this framework.
-   - Former tester and maintainer till version v1.2.
-   - Contact - <yugabdh.pashte [at] gmail.com>
-
- * Biprodeep Roy <@virtu4lgh0st>
-
-   - Ideator and remediator of this project.
-   - Helped improving overall build + runtime efficiency.
-   - Contact - <biprodeep [at] gmail.com>
+   - Contributed a dockerfile to TIDoS.
+   - Contact - <contact.arkwrn [at] gmail.com>
 
  * Cclauss <@cclauss>
  
-   - Bug fixer and remediator of TIDoS.
-   - Helped rolling out migration from Py2 to Py3.
+   - Helped rolling out migration from Python2 to Python3.
    - Contact - <█████████████████████>
